| Summary: | ASTERISK-22017: crash - assertion failure - in pj_sockaddr_get_port when in transport_apply at res_sip/config_transport.c:105 | ||
| Reporter: | Rusty Newton (rnewton) | Labels: | |
| Date Opened: | 2013-07-04 20:38:14 | Date Closed: | 2013-07-08 14:53:41 |
| Priority: | Major | Regression? | |
| Status: | Closed/Complete | Components: | Resources/res_pjsip |
| Versions: | SVN | Frequency of Occurrence | Constant |
| Related Issues: | |||
| Environment: | 393490 | Attachments: | ( 0) backtrace.txt ( 1) full.txt |
| Description: | To reproduce:
# configure res_sip.conf with a transport config object, with no "bind=" specified. # On the startup of Asterisk and res_sip's parsing of res_sip.conf, crash! | ||
| Comments: | |||