Ensure that a valid bind host is specified for transports.

(closes issue ASTERISK-22017)
Reported by: Rusty Newton


git-svn-id: https://origsvn.digium.com/svn/asterisk/trunk@393833 65c4cc65-6c06-0410-ace0-fbb531ad65f3